# forge-pilot

./: .coverage  .dockerignore  .gitignore  BACKEND_PROGRESS.md  BRANDGENIE_README.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FORGEPILOT_SMOKE_v1.md  INTEGRATION_COMPLETE.md  LAUNCH_READINESS_CHECKLIST.md  LICENSE.md  OMEGA_SDK_BUILD_DIRECTIVE.md  README.md  REVENUE_PROJECTIONS.md  SDK_AGENT_ASSIGNMENT.md  SDK_BUILD_DIRECTIVE.md  SDK_EXECUTIVE_SUMMARY.md  TESTING_COMPLETE.md  TEST_SUITE_SUMMARY.md  VICTORY_SUMMARY.md  VICTORY_SUMMARY_v2.md  WARP.md  cloudbuild.yaml  coverage.json  demo.py  deploy-forgepilot.sh  docker-compose.yml  forgepilot_live_demo.py  install-playwright.bat  junit.xml  keon-rg-resources.json  launch_forgepilot.sh  make-executable.sh  next.config.ts  npm-out.txt  package-lock.json  package.json  playwright.config.ts  pw-install-out.txt  (+13 more)
.claude/: settings.local.json
.github/workflows/: azure-static-web-apps-brave-bush-034abd30f.yml  ci.yml  forgepilot-api-ci.yml
.tmp/: ca_create_help.txt  forgepilot-launch-ledger.jsonl  forgepilot-launch-runtime.json  omega-build-images.json  req.json  runtime-fix.patch  runtime-store.working.ts
.tmp/ca-build/: .gitignore  Dockerfile  Dockerfile.deploy  LICENSE.md  (+14 more)
backend/: Dockerfile  README.md  requirements.txt
core/: run_manifest_emitter.py
docs/: DOCTRINE_SEAL.md  VISUAL_LANGUAGE_GUIDANCE.md  WHITEPAPER.md
forgepilot-api/: Dockerfile  README.md  SENTINELS.md  pyproject.toml  pytest.ini  run_tests.ps1  run_tests.sh
forgepilot-api/app/: __init__.py  config.py  main.py
forgepilot-api/app/clients/: __init__.py  federation_client.py
forgepilot-api/app/evidence/: __init__.py  emitter.py
forgepilot-api/app/middleware/: __init__.py  correlation.py  tenant_scope.py
forgepilot-api/app/models/: __init__.py  campaign.py  errors.py
forgepilot-api/app/routes/: __init__.py  campaigns.py  health.py
forgepilot-api/app/storage/: __init__.py  memory.py
forgepilot-api/scripts/: release-gates.ps1
forgepilot-api/tests/: QUICK_START.md  README.md  TESTING_GUIDE.md  TEST_PATTERNS.md  __init__.py  conftest.py  test_architecture_boundaries.py  test_fc_routes_surface.py  test_intake_stage_enforcement.py  test_keon_fail_closed.py
forgepilot-api/tests/chaos/: run_chaos.py
forgepilot-api/tests/contracts/: test_api_contracts.py  test_federation_contracts.py
forgepilot-api/tests/e2e/: run_e2e.py
forgepilot-api/tests/helpers/: __init__.py  federation_helpers.py
forgepilot-api/tests/integration/: test_campaign_flow.py  test_e2e_workflows.py  test_end_to_end_workflows.py  test_federation_integration.py  test_forgepilot_omega_flow.py  test_genesis_protocol.py
forgepilot-api/tests/unit/: test_evidence_emitter.py  test_models.py  test_storage.py
forgepilot-api/tests/utils/: __init__.py  federation_test_helpers.py
forgepilot-api/tools/: evidence_cli.py
forgepilot-sdk/: .gitignore  README.md  pyproject.toml
forgepilot-sdk/forgepilot/: __init__.py
omega-sdk-ts/: omega-sdk-1.0.0.tgz
playwright-report/: index.html  results.json
scripts/: dev-sanity.ps1  omega-register.mjs  setup-dns.sh  smoke-e2e-v1.sh  smoke-launch-session.ps1
seed/: seed-domain-profiles.ts
src/: middleware.ts  proxy.ts
terraform/: budget.tf  cdn.tf  database.tf  main.tf  storage.tf  terraform.tfvars.example  variables.tf
test-results/: .last-run.json
tests/: conftest.py
(+393 files in other folders)
